<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_welcome"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="58sp"
        android:fontFamily="@font/caveat_bold"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_marginTop="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:padding="4dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        android:background="@drawable/line_border_welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_solid_background"
            android:text="@string/show_text_list"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            style="@android:style/Widget.Button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_storage_manager"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_border_background"
            android:text="@string/show_storage_manager"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            style="@android:style/Widget.Button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>