<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_shared"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SharedManagerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_manager"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#c1c1c1"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/add_data_to_shared_preferences"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/ic_hardware"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_text_to_be_stored_in_shared_preferences"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="15sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintEnd_toEndOf="@id/imageView2"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_text_her"
        android:gravity="center"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/btn_solid_background"
        android:text="@string/add_data_to_shared_preferences"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        style="@android:style/Widget.Button"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:layout_constraintStart_toStartOf="@id/edit_text_name"
        app:layout_constraintEnd_toEndOf="@id/edit_text_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>